#439 closed bug (fixed)
Can't close windows if team monitor ontop
Reported by: | diver | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | - General | Version: | |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Can't close windows if team monitor ontop, but you could access deskbar and close apps/windows from there. Also there is a side effect of this, screenshot winll follow.
Attachments (1)
Change History (7)
by , 19 years ago
Attachment: | team monitor.PNG added |
---|
comment:1 by , 19 years ago
That seems to be a bug indeed: the Team monitor is a modal window - you're not supposed to be able to use other windows while it's open. It's almost the same in BeOS, though: when the Deskbar is in floating-all mode, you can still use it when the team monitor is open. However, the Deskbar will stay on top of the team monitor window, and will thus hide that menu thing :)
I think I'll make all windows unaccessible and behind modal-all windows. Any comments about that?
comment:2 by , 19 years ago
I think that team monitor is *very* basic. There are things i want to see:
Quit Application button would be nice. Also resizing team monitor window would be nice too. How much memory/cpu is used per team should be there.
comment:3 by , 19 years ago
Fixed in hrev17121 - modal windows now block other windows correctly. With regard to your comments to the team monitor: 1) you're supposed to quit apps via the Deskbar, not the team monitor 2) resizing would be something to think about 3) that's the typical third party opportunity (ProcessController) :-)
comment:4 by , 19 years ago
Status: | new → closed |
---|
comment:5 by , 19 years ago
Resolution: | → fixed |
---|
team monitor