* Modal windows are now correctly taken into account: no click go through to a   window with a modal window. This also completes the fix for bug #439. * Made some methods const that should have been const in the first place. * Note, there is now a Desktop::_WindowHasModal() and WindowLayer::HasModal() -   the latter only works in the current workspace.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@17121 a95241bf-73f2-0310-859d-f6bbb57e9c96